# mvs-demo

./: .gitignore  CLAUDE.md  CMakeLists.txt  MVS_VIR_CONVERT.md  README.md
.claude/: settings.local.json
docs/superpowers/plans/: 2026-04-30-mvs-camera-viewer-plan.md
docs/superpowers/specs/: 2026-04-30-mvs-camera-viewer-design.md
scripts/: bundle_portable.sh
src/: CameraEngine.cpp  CameraEngine.h  CameraParamPanel.cpp  CameraParamPanel.h  DevicePanel.cpp  DevicePanel.h  ImageViewer.cpp  ImageViewer.h  MainWindow.cpp  MainWindow.h  Types.h  VirtualCameraPanel.cpp  VirtualCameraPanel.h  main.cpp
test_grab/: main.cpp
